objects/CIF_Search_Audit__c.object
<CustomObject>
    <description>RN - CloudSmiths - Object that holds the details of every CIF search done by CSC agents from Cases</description>
    <fields>
        <fullName>CaseCIFNumber__c</fullName>
        <description>RN - CloudSmiths - Stores the CIF number linked to the Case from which the CIF search was launched</description>
        <label>Case CIF Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <description>RN - CloudSmiths - Stores the record Id of the Case from which the CIF search was launched</description>
        <label>Case Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchAction__c</fullName>
        <description>RN - CloudSmiths - Stores the CIF search action that was launched</description>
        <label>Search Action</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchValue__c</fullName>
        <description>RN - CloudSmiths - Stores the CIF search value the user used</description>
        <label>Search Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>RN - CloudSmiths - Stores the record Id of the user that launched the CIF search.</description>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CIF Search Audit</label>
    <nameField>
        <displayFormat>CIFAUDIT{0000000000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIF Search Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>